# autonomous-qa-agent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.claude/skills/ui-tester/: SKILL.md
.claude/skills/ui-tester/prompts/: analyze_results.md  crawl.md  generate_tests.md  infer_flows.md
.github/workflows/: ci.yml
demo/sample_app/: app.py
demo/sample_app/templates/: dashboard.html  form.html  index.html  login.html
src/: cli_bridge.py  models.py
src/agent/: __init__.py  crawler.py  executor.py  flow_inferencer.py  test_generator.py
src/analysis/: __init__.py  accessibility.py  severity_scorer.py  visual_diff.py
src/cli/: __init__.py  main.py
src/reporting/: __init__.py  html_reporter.py  json_reporter.py
src/reporting/templates/: report.html.j2
tests/integration/: test_full_agent_run.py
tests/unit/: test_accessibility.py  test_cli_bridge.py  test_crawler.py  test_executor.py  test_flow_inferencer.py  test_reporters.py  test_severity_scorer.py  test_test_generator.py  test_visual_diff.py
